# tenantfirstaid

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Architecture.md  Deployment.md  LICENSE  README.md  SOLUTION_PLAN.md  docker-compose.prod.yml  docker-compose.yml  mise.toml
backend/: .dockerignore  .env.example  .gitignore  .great-docs-dictionary  Dockerfile  Makefile  PERSISTENT_DATA_README.md  README.md  great-docs.yml  langgraph.json  mise.toml  pyproject.toml  repro_rate_limit.py
backend/developer_guide/: 01-system-overview.qmd  02-backend-overview.qmd  03-rag-and-retrieval.qmd  04-streaming.qmd  06-configuration.qmd  07-corpus-ingestion.qmd  08-command-reference.qmd  index.qmd
backend/developer_guide/demos/: check.termshow
backend/evaluate/: EVALUATION.md  QUICKSTART.md  create_langsmith_dataset.py  dataset-tenant-legal-qa-examples.jsonl  dataset-tenant-legal-qa-scenarios.jsonl  eval_history.py  langsmith_dataset.py  langsmith_evaluators.py  langsmith_scenario_schema.json  measure_evaluator_variance.py  results_display.py  run_langsmith_evaluation.py
backend/evaluate/evaluators/: citation_accuracy.md  legal_correctness.md  tone.md
backend/evaluation_guide/: index.qmd
backend/evaluation_guide/backend-contributor/: dataset-management.qmd  running-evaluations.qmd  setup-and-environment.qmd  troubleshooting.qmd  understanding-scores.qmd  workflows.qmd
backend/evaluation_guide/content-contributor/: contributing-examples.qmd  local-studio.qmd
backend/evaluation_guide/editing-and-results/: evaluator-rubrics.qmd  system-prompt.qmd  viewing-results.qmd
backend/scripts/: EVALUATION.md  create_app_gcs.py  create_corpus_jsonl.py  create_datastore_gcs.py  create_langsmith_dataset.py  create_vector_store.py  enforce_ascii.py  eval.csv  eval.py  eval_results_o4-mini_high.json  extract_sections.py  generate_metadata_jsonl.py  generate_referrals.py  generate_types.py  ingest_corpus.py  langsmith_evaluators.py  repro_rate_limit.py  run_langsmith_evaluation.py  simple_eval.py  simple_langchain_demo.py  simple_langchain_example.py  tenant_tests.jsonl  upload_to_gcs.py  vertex_ai_list_datastores.py  vertex_ai_search.py
backend/src/: app.py  chat.py  submit_feedback.py
backend/tenantfirstaid/: README_LANGCHAIN.md  app.py  chat.py  citations.py  constants.py  feedback.py  google_auth.py  graph.py  langchain_chat.py  langchain_chat_manager.py  langchain_tools.py  letter_template.md  location.py  logger.py  prompt.py  referrals.py  referrals_data.json  referrals_view.py  schema.py  session.py  shared.py  system_prompt.md  upload.py
backend/tests/: conftest.py  test_app.py  test_chat.py  test_citations.py  test_constants.py  test_eval_history.py  test_feedback.py  test_generate_metadata_jsonl.py  test_graph.py  test_import.py  test_langchain_chat.py  test_langchain_chat_manager.py  test_langchain_tools.py  test_langsmith_dataset.py  test_langsmith_evaluations.py  test_langsmith_evaluators.py  test_location.py  test_logger.py  test_measure_evaluator_variance.py  test_query_rate_limit.py  test_referrals.py  test_results_display.py  test_upload.py
backend/user_guide/: 02-backend-overview.qmd  03-rag-and-retrieval.qmd  04-streaming.qmd  05-conversation-management.qmd  06-configuration.qmd  08-command-reference.qmd  index.qmd
(+185 files in other folders)
