[project]
name = "tenant-first-aid"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "flask",
  "valkey",
  "gunicorn",
  "openai",
  "jsonlines",
  "simplejson",
  "ipdb>=0.13.13",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*"]